intern/cycles/kernel/closure/bsdf_microfacet.h
@@ -508,7 +508,7 @@ ccl_device_inline float bsdf_G(float alpha2, float cos_NI, float cos_NO)
 /* Normal distribution function. */
 template<MicrofacetType m_type> ccl_device_inline float bsdf_D(float alpha2, float cos_NH)
 {
-  const float cos_NH2 = sqr(cos_NH);
+  const float cos_NH2 = min(sqr(cos_NH), 1.0f);
 
   if (m_type == MicrofacetType::BECKMANN) {
     return expf((1.0f - 1.0f / cos_NH2) / alpha2) / (M_PI_F * alpha2 * sqr(cos_NH2));
